fix: don't set z-index of bce-switch knob

--- a/packages/core/src/components/bce-switch/bce-switch.scss
+++ b/packages/core/src/components/bce-switch/bce-switch.scss
@@ -20,7 +20,7 @@ bce-switch {
       border-radius: 14px;
 
       &:after {
-        @include elevate(1);
+        @include elevate(1, false);
         content: '';
         position: absolute;
         top: 0;
